// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`balanceBuilder > assets > account > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "USDT",
    "<ADDRESS>",
  ],
  "func": "account",
  "module": "assets",
  "transform": [Function],
}
`;

exports[`balanceBuilder > assets > account > should transform correctly 1`] = `999n`;

exports[`balanceBuilder > foreignAssets > account > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    {
      "interior": {
        "X2": [
          {
            "GlobalConsensus": {
              "ethereum": {
                "chainId": 1,
              },
            },
          },
          {
            "AccountKey20": {
              "key": "0x98891e5FD24Ef33A488A47101F65D212Ff6E650E",
            },
          },
        ],
      },
      "parents": 2,
    },
    "<ADDRESS>",
  ],
  "func": "account",
  "module": "foreignAssets",
  "transform": [Function],
}
`;

exports[`balanceBuilder > foreignAssets > account > should transform correctly 1`] = `999n`;

exports[`balanceBuilder > system > account > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ADDRESS>",
  ],
  "func": "account",
  "module": "system",
  "transform": [Function],
}
`;

exports[`balanceBuilder > system > account > should transform correctly with frozen balance 1`] = `900n`;

exports[`balanceBuilder > system > account > should transform correctly with miscFrozen balance 1`] = `900n`;

exports[`balanceBuilder > system > account > should transform correctly with reserved balance 1`] = `999n`;

exports[`balanceBuilder > system > accountEquilibrium > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ADDRESS>",
  ],
  "func": "account",
  "module": "system",
  "transform": [Function],
}
`;

exports[`balanceBuilder > system > accountEquilibrium > should return 0 if response empty 1`] = `0n`;

exports[`balanceBuilder > system > accountEquilibrium > should transform correctly if not v0 1`] = `62730076931n`;

exports[`balanceBuilder > system > accountEquilibrium > should transform v0 correctly 1`] = `2954852364913n`;

exports[`balanceBuilder > tokens > accounts > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ADDRESS>",
    "USDT",
  ],
  "func": "accounts",
  "module": "tokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder > tokens > accounts > should transform correctly 1`] = `900n`;
